# bar-assistant-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/bar_assistant_mcp/: __init__.py  server.py
